# server/models/response200.py
@@ -8,7 +8,7 @@ from typing import List, Dict
 from util import deserialize_model
 
 
-class InlineResponse200(Model):
+class Response200(Model):
     """
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
@@ -46,23 +46,23 @@ class InlineResponse200(Model):
         self._periods = periods
 
     @classmethod
-    def from_dict(cls, dikt) -> 'InlineResponse200':
+    def from_dict(cls, dikt) -> 'Response200':
         """
         Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The inline_response_200 of this InlineResponse200.
-        :rtype: InlineResponse200
+        :return: The response_200 of this Response200.
+        :rtype: Response200
         """
         return deserialize_model(dikt, cls)
 
     @property
     def endotype_id(self) -> str:
         """
-        Gets the endotype_id of this InlineResponse200.
+        Gets the endotype_id of this Response200.
 
-        :return: The endotype_id of this InlineResponse200.
+        :return: The endotype_id of this Response200.
         :rtype: str
         """
         return self._endotype_id
@@ -70,9 +70,9 @@ class InlineResponse200(Model):
     @endotype_id.setter
     def endotype_id(self, endotype_id: str):
         """
-        Sets the endotype_id of this InlineResponse200.
+        Sets the endotype_id of this Response200.
 
-        :param endotype_id: The endotype_id of this InlineResponse200.
+        :param endotype_id: The endotype_id of this Response200.
         :type endotype_id: str
         """
 
@@ -81,9 +81,9 @@ class InlineResponse200(Model):
     @property
     def endotype_description(self) -> str:
         """
-        Gets the endotype_description of this InlineResponse200.
+        Gets the endotype_description of this Response200.
 
-        :return: The endotype_description of this InlineResponse200.
+        :return: The endotype_description of this Response200.
         :rtype: str
         """
         return self._endotype_description
@@ -91,9 +91,9 @@ class InlineResponse200(Model):
     @endotype_description.setter
     def endotype_description(self, endotype_description: str):
         """
-        Sets the endotype_description of this InlineResponse200.
+        Sets the endotype_description of this Response200.
 
-        :param endotype_description: The endotype_description of this InlineResponse200.
+        :param endotype_description: The endotype_description of this Response200.
         :type endotype_description: str
         """
 
@@ -102,9 +102,9 @@ class InlineResponse200(Model):
     @property
     def endotype_evidence(self) -> str:
         """
-        Gets the endotype_evidence of this InlineResponse200.
+        Gets the endotype_evidence of this Response200.
 
-        :return: The endotype_evidence of this InlineResponse200.
+        :return: The endotype_evidence of this Response200.
         :rtype: str
         """
         return self._endotype_evidence
@@ -112,9 +112,9 @@ class InlineResponse200(Model):
     @endotype_evidence.setter
     def endotype_evidence(self, endotype_evidence: str):
         """
-        Sets the endotype_evidence of this InlineResponse200.
+        Sets the endotype_evidence of this Response200.
 
-        :param endotype_evidence: The endotype_evidence of this InlineResponse200.
+        :param endotype_evidence: The endotype_evidence of this Response200.
         :type endotype_evidence: str
         """
 
@@ -123,9 +123,9 @@ class InlineResponse200(Model):
     @property
     def periods(self) -> List[EndotypesPeriod]:
         """
-        Gets the periods of this InlineResponse200.
+        Gets the periods of this Response200.
 
-        :return: The periods of this InlineResponse200.
+        :return: The periods of this Response200.
         :rtype: List[EndotypesPeriod]
         """
         return self._periods
@@ -133,9 +133,9 @@ class InlineResponse200(Model):
     @periods.setter
     def periods(self, periods: List[EndotypesPeriod]):
         """
-        Sets the periods of this InlineResponse200.
+        Sets the periods of this Response200.
 
-        :param periods: The periods of this InlineResponse200.
+        :param periods: The periods of this Response200.
         :type periods: List[EndotypesPeriod]
         """
 
